Bug 1405439 Do not cast nullptr to bool implicitly, instead return false in gfx/vr r=kip

MozReview-Commit-ID: LtfTRFDopsT